feature is done

--- a/views/patients.ejs
+++ b/views/patients.ejs
@@ -24,7 +24,7 @@
             <% data.forEach(el => { %>
                 <tr>
                     <td><%= el.id %></td>
-                    <td><%= el.name %></td>
+                    <td><%= el.sayMyName() %></td>
                     <td><%= el.age %></td>
                     <td><%= el.comorbid %></td>
                     <form action="#">
