--- a/views/addPatient.ejs
+++ b/views/addPatient.ejs
@@ -14,17 +14,24 @@
         <input type="text" name="name">
         <p>Age</p>
         <input type="number" name="age">
-        <p>Comorbid</p>
+        <p>Comorbid (if more than one, separate with comma)</p>
         <input type="text" name="comorbid">
         <p>Gender</p>
-        <input type="radio" id="male" name="gender" value="male">
-        <label for="male">Male</label>
-        <input type="radio" id="female" name="gender" value="female">
-        <label for="female">Female</label><br>
+        <select name="gender" id="">
+            <option value="male" disabled>Select Gender</option>
+            <option value="male">Male</option>
+            <option value="female">female</option>
+        </select>
 
         <br>
         <button type="submit">submit</button><button type="submit" formaction="/patients" formmethod="GET">Go Back</button>
     </form>
 
+    <% if (query) { %>
+        <% query.forEach(e => { %>
+            <p> <%= e %> </p>
+
+        <% }) %>
+    <% } %>
 </body>
 </html>
