session feature is done

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,3 +1,6 @@
-<a href="/">HOME</a>
-<a href="/patients">PATIENTS</a>
-<a href="/medicine">MEDICINE</a>
+<form action="/logout">
+    <a href="/">HOME</a>
+    <a href="/patients">PATIENTS</a>
+    <a href="/medicine">MEDICINE</a>
+    <button type="submit">Log Out</button>
+</form>
