--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOMEPAGE</title>
+    <title>Register</title>
 </head>
 <body>
     <form action="/login">
@@ -14,6 +14,19 @@
         <button type="submit">Log In</button>
         <button type="submit" formaction="/register">Register</button>
     </form>
-    <h1>WELCOME</h1>
+    <h1>Log In</h1>
+    <form action="/login" method="POST">
+        <p>Username</p>
+        <input type="text" name="username">
+        <p>Password</p>
+        <input type="password" name="password">
+        <br>
+
+        <button type="submit">submit</button><button type="submit" formaction="/patients" formmethod="GET">Go Back</button>
+    </form>
+
+    <% if (query) { %>
+        <p> <%= query %> </p>
+    <% } %>
 </body>
 </html>
