--- a/views/medicineView.ejs
+++ b/views/medicineView.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <scrip src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></scrip>
     <title>
         <%= title %>
     </title>
@@ -43,6 +44,24 @@
             </tr>
             <% }) %>
     </table>
-</body>
+    <div class="container">
+    <canvas id="myChart"></canvas>
+    </div>
+        <script>
+           
+            let myChart = document.getElementById('myChart').getContext('2d');
 
+            let medChart = new Chart(myChart, {
+                type: 'bar',
+                data: {
+                    labels: ['panadol', 'novorapid', 'epipen'],
+                    datasets: [{
+                        label: 'Medicine',
+                        data: [21, 21, 32]
+                    }]
+                },
+                options: {}
+            })
+        </script>
+</body>
 </html>
