--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,7 +22,7 @@
         <input type="password" name="password">
         <br>
 
-        <button type="submit">submit</button><button type="submit" formaction="/patients" formmethod="GET">Go Back</button>
+        <button type="submit">Log In</button><button type="submit" formaction="/patients" formmethod="GET">Go Back</button>
     </form>
 
     <% if (query) { %>
