--- a/views/addPatient.ejs
+++ b/views/addPatient.ejs
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <%- include ('./partials/styles')%>
     <title>Patients</title>
 </head>
-<body>
+<body style="background-image: url(https://www.toptal.com/designers/subtlepatterns/patterns/double-bubble-outline.png);text-align: center;margin-left: auto;margin-right: auto;">
     <%- include ('./partials/navbar')%>
     <h1>Add New Patient</h1>
     <form action="/patients/add" method="POST">
@@ -24,7 +25,7 @@
         </select>
 
         <br>
-        <button type="submit">submit</button><button type="submit" formaction="/patients" formmethod="GET">Go Back</button>
+        <button class="btn btn-outline-success" type="submit">submit</button><button type="submit" formaction="/patients" formmethod="GET" class="btn btn-outline-success">Go Back</button>
     </form>
 
     <% if (query) { %>
