--- a/views/addMedicineView.ejs
+++ b/views/addMedicineView.ejs
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <%- include ('./partials/styles')%>
     <title>
         <%= title %>
     </title>
 </head>
-<nav>
+<body style="background-image: url(https://www.toptal.com/designers/subtlepatterns/patterns/double-bubble-outline.png);">
     <%- include ('./partials/navbar')%>
-</nav>
-<h1>
-    <%= title %>
-</h1>
-<body>
+    <h1>
+        <%= title %>
+    </h1>
     <form action="/medicine/add" method="POST">
        
         <label for="name">Name</label><br>
@@ -23,9 +22,9 @@
         <label for="stock">Stock</label><br>
         <input type="number" name="stock" min="1" value="1" id=""><br>
 
-        <button type="submit">Save</button>
+        <button class="btn btn-outline-success" type="submit">Save</button>
+        <button class="btn btn-outline-success" formaction="/medicine">Cancel</button><br>
     </form>
-    <a href="/medicine"><button>Cancel</button></a> <br>
 
     <%= errors %>
 </body>
