--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,16 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <%- include ('./partials/styles')%>
+    <title>Log In</title>
 </head>
-<body>
-    <form action="/login">
-        <a href="/">HOME</a>
-        <a href="/patients">PATIENTS</a>
-        <a href="/medicine">MEDICINE</a>
-        <button type="submit">Log In</button>
-        <button type="submit" formaction="/register">Register</button>
-    </form>
+<body style="background-image: url(https://www.toptal.com/designers/subtlepatterns/patterns/double-bubble-outline.png);">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">Home</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/patients">Patients</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/medicine">Medicines</a>
+              </li>
+            </ul>
+            <form class="d-flex" action="/">
+                    <button class="btn btn-outline-success" type="submit" formaction="/">Go Back</button>
+            </form>
+          </div>
+        </div>
+      </nav>
     <h1>Log In</h1>
     <form action="/login" method="POST">
         <p>Username</p>
@@ -22,7 +37,7 @@
         <input type="password" name="password">
         <br>
 
-        <button type="submit">Log In</button><button type="submit" formaction="/patients" formmethod="GET">Go Back</button>
+        <button class="btn btn-outline-success" type="submit">Log In</button><button class="btn btn-outline-success" type="submit" formaction="/patients" formmethod="GET">Go Back</button>
     </form>
 
     <% if (query) { %>
