--- a/views/loginComplete.ejs
+++ b/views/loginComplete.ejs
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv='refresh' content='2; URL=/'>
+    <%- include ('./partials/styles')%>
     <title>Log In Success</title>
 </head>
-<body>
+<body style="background-image: url(https://www.toptal.com/designers/subtlepatterns/patterns/double-bubble-outline.png);">
+    <%- include ('./partials/navbar')%>
     <div style="width: 100%;text-align: center;">
         <h1 style="margin-left: auto;margin-right: auto;">Log In Success</h1>
     </div>
