--- a/views/patients.ejs
+++ b/views/patients.ejs
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <%- include ('./partials/styles')%>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
     <title>Patients</title>
 </head>
-<body>
+<body style="background-image: url(https://www.toptal.com/designers/subtlepatterns/patterns/double-bubble-outline.png);">
     <%- include ('./partials/navbar')%>
-    <h1>Patients List</h1>
+    <div style="text-align: center;margin-left: auto;margin-right: auto;">
+        <h1>Patients List</h1>
+    
+        <form action="/patients/add">
+            <button type="submit" class="btn btn-outline-success">Add Patient</button>
+        </form>
+    </div>
 
-    <a href="patients/add">Add Patient</a>
-    <table border="1">
-        <thead>
-            <tr>
+    <table class="table table-hover" style="width: 80%; margin-left: auto;margin-right: auto;border border-4">
+        <thead class="border border-4">
+            <tr class="border border-4">
                 <th>ID</th>
                 <th>Name</th>
                 <th>Age</th>
@@ -24,54 +30,58 @@
         </thead>
         <tbody>
             <% data.forEach(el => { %>
-                <tr>
+            <tr class="border border-4">
                     <td><%= el.id %></td>
                     <td><%= el.sayMyName() %></td>
                     <td><%= el.age %></td>
                     <td><%= el.comorbid %></td>
                     <form action="#">
-                        <td><button formaction="patients/view/<%= el.id %>">View</button> <button onclick="return confirm('Are you sure want to remove <%= el.name%> from patients?')" type="submit"formaction="patients/delete/<%= el.id %>">Delete</button> </td>
+                        <td><button formaction="patients/view/<%= el.id %>" class="btn btn-outline-success">View</button> <button class="btn btn-outline-success" onclick="return confirm('Are you sure want to remove <%= el.name%> from patients?')" type="submit"formaction="patients/delete/<%= el.id %>">Delete</button> </td>
                     </form>
                 </tr>
             <% }) %>
         </tbody>
     </table>
     <br>
-    <canvas id="myChart" width="30px" !important; height="30px" !important></canvas>
-    <br>
-
+    <!-- <canvas id="myChart" width="400" height="400"></canvas>
     <script>
-        var ctx = document.getElementById('myChart');
-        var myChart = new Chart(ctx, {
-            type: 'pie',
-            data: {
-                labels: medname,
-                datasets: [{
-                    label: '# of Votes',
-                    data: ammount,
-                    backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 206, 86, 0.2)',
-                        'rgba(75, 192, 192, 0.2)',
-                        'rgba(153, 102, 255, 0.2)',
-                        'rgba(255, 159, 64, 0.2)'
-                    ],
-                    borderColor: [
-                        'rgba(255, 99, 132, 1)',
-                        'rgba(54, 162, 235, 1)',
-                        'rgba(255, 206, 86, 1)',
-                        'rgba(75, 192, 192, 1)',
-                        'rgba(153, 102, 255, 1)',
-                        'rgba(255, 159, 64, 1)'
-                    ],
-                    borderWidth: 1
+    var ctx = document.getElementById('myChart');
+    var myChart = new Chart(ctx, {
+        type: 'pie',
+        data: {
+            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+            datasets: [{
+                label: '# of Votes',
+                data: [12, 19, 3, 5, 2, 3],
+                backgroundColor: [
+                    'rgba(255, 99, 132, 0.2)',
+                    'rgba(54, 162, 235, 0.2)',
+                    'rgba(255, 206, 86, 0.2)',
+                    'rgba(75, 192, 192, 0.2)',
+                    'rgba(153, 102, 255, 0.2)',
+                    'rgba(255, 159, 64, 0.2)'
+                ],
+                borderColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)',
+                    'rgba(75, 192, 192, 1)',
+                    'rgba(153, 102, 255, 1)',
+                    'rgba(255, 159, 64, 1)'
+                ],
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        beginAtZero: true
+                    }
                 }]
-            },
-            options: {
-                maintainAspectRatio: false
             }
-        });
-    </script>
+        }
+    });
+    </script> -->
 </body>
 </html>
